--- a/css/leaflet-elevation.css
+++ b/css/leaflet-elevation.css
@@ -1,6 +1,4 @@
 
-
-
 .leaflet-hidden {
   visibility: hidden;
 }
@@ -15,7 +13,7 @@
 }
 
 .elevation-control .background {
-  background-color: var(--ele-bg, rgba(70, 130, 180, 0.2));
+  background-color: var(--ele-bg, rgba(35, 107, 151, 0.2));
   border-radius: 5px;
   overflow: visible;
   display: block;
@@ -95,19 +93,19 @@
 }
 
 .elevation-control .mouse-focus-line {
-  stroke: #000;
+  stroke: #020101;
   stroke-width: 1;
 }
 
 .elevation-control .mouse-focus-label-rect {
-  fill: #000;
+  fill: #000000;
   fill-opacity: 0.75;
   stroke-width: 1;
   stroke: #444;
 }
 
 .elevation-control .mouse-focus-label-text {
-  fill: #FFF;
+  fill: #c2c1c1;
   font-size: 10px;
 }
 
@@ -149,7 +147,7 @@
 }
 
 .elevation-toggle-icon {
-  background-color: #fff;
+  background-color: #e0dede;
   right: 5px;
   top: 5px;
   height: var(--ele-toggle-size, 36px);
