--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,28 @@
 /*insert style here*/
 
-#map {
-    height: 450px !important;
+#elevation-div {
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
-html,
+
+
+#elevation-div {
+    height: 25%;
+    font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
+}
+#map {
+    height: 400px !important;
+    width: 100% !important;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    border-color: #548eb5 !important;
+    border-style: inset; 
+    border-width: 5px;
+}
 
 .header {
     text-align: center;
@@ -16,7 +34,6 @@ body{
     background-color: #cba87d;
     color: #1A1A1A;
     font-family: "open sans", "verdana", "sans-serif";
-    margin: 10px;
     text-align: left;
 }
 
@@ -26,11 +43,45 @@ body{
 
 #map2{
     position:auto;
-    height: 500px;
+    height: 600px;
     width: 900px;
 }
 
 .title_map{
-    font-size: 20px;
+    margin-top: 5px !important;
+    font-size: 25px;
+    text-align: center;
+    font-family: "Comic Sans MS", cursive;
+    font-weight: bold;
+    height: 20px;
+    margin:20px;
+
 }
 
+
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+  }
+  
+  .popup-content {
+    background-color: #e6e6e6;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .popup-content h2 {
+    margin-top: 0;
+  }
+  
+  .popup-content p {
+    margin-bottom: 20px;
+  }
