--- a/css/leaflet-elevation.css
+++ b/css/leaflet-elevation.css
@@ -38,7 +38,7 @@
 }
 
 .elevation-control .grid .tick line {
-  stroke: var(--ele-grid, #EEE);
+  stroke: var(--ele-grid, #c1c0c0);
   stroke-width: 1px;
   shape-rendering: crispEdges;
 }
@@ -105,7 +105,7 @@
 }
 
 .elevation-control .mouse-focus-label-text {
-  fill: #c2c1c1;
+  fill: #b5b0b0;
   font-size: 10px;
 }
 
@@ -147,7 +147,7 @@
 }
 
 .elevation-toggle-icon {
-  background-color: #e0dede;
+  background-color: #a19d9d;
   right: 5px;
   top: 5px;
   height: var(--ele-toggle-size, 36px);
@@ -334,5 +334,5 @@
   border-radius: 10px;
   text-align: center;
   color: #000;
-  background: #fff;
+  background: #b1aeae;
 }
