--- a/css/style.css
+++ b/css/style.css
@@ -61,27 +61,105 @@ body{
 
 .popup {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 60%;
+    height: 50%;
+    background-color: rgba(194, 167, 167, 0.7);
     display: none;
     align-items: center;
     justify-content: center;
     z-index: 9999;
-  }
-  
-  .popup-content {
-    background-color: #e6e6e6;
-    padding: 20px;
-    text-align: center;
+    border-color: #5f5a54 !important;
+    border-style: inset; 
+    border-width: 5px;
   }
   
   .popup-content h2 {
+    position:relative;
+    text-align: center;
     margin-top: 0;
   }
   
   .popup-content p {
     margin-bottom: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
+
+  #introButton {
+    width:60px;
+    height: 35px;
+    padding: 0px;
+    position: absolute;
+    top: 9px;
+    right: 40px;
+    background-color: #cba87d;
+    font-family: "Comic Sans MS", cursive;
+    font-size: 15px;
+  }
+
+#close_button {
+    width:60px;
+    height: 35px;
+    padding: 0px;
+    position: absolute;
+    top: 9px;
+    right: 40px;
+    background-color: #eae8e6;
+    font-family: "Comic Sans MS", cursive;
+    font-size: 15px;
+}
+
+
+.container1 {
+    display: flex;
+    align-items: center;
+  }
+  
+  .image {
+    order:2;
+    width: 30%; /* Adjust the width of the image to 30% */
+    height: 400px;
+    width: 500px;
+  }
+  
+  .paragraph {
+    width: 70%; /* Adjust the width of the paragraph to 70% */
+  }
+
+  .container2 {
+    display: flex;
+    align-items: center;
+  }
+  
+  .leaflet-map {
+    /* Add any specific styles for the map container here */
+    position:auto;
+    height: 600px;
+    width: 900px;
+  }
+  
+  .paragraph2 {
+    /* Add any specific styles for the paragraph here */
+    order:1;
+    padding-left: 30px;
+    width: 35%;
+  }
+  
+  .h1{
+    padding-left: 40px;
+    font-family: "Comic Sans MS", cursive;
+  }
+
+.container3 {
+    display: flex;
+    align-items: center;
+}
+
+.paragraph3{
+    margin: 0 auto;
+    font-size: small;
+}
+
